:rocket::wrench::gear: Mejoras en el rendimiento, configuración y ajustes técnicos

--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ DBUSER=cnxuser
 PASSWORD=cnx_password
 HOST=localhost
 PORT=5432
-ML_SEARCH_ENDPOINT="https://api.mercadolibre.com/sites/MLA/search"
-ML_ITEM_ENDPOINT = "https://api.mercadolibre.com/items/{item_id}"
+ml_search_endpoint="https://api.mercadolibre.com/sites/MLA/search"
+ml_item_endpoint="https://api.mercadolibre.com/items/{item_id}"
