:hammer::sparkles:Se agrega automatizacion del espacio de trabajo y se completa el readme.md

--- a/.env
+++ b/.env
@@ -1,7 +1,11 @@
-DBNAME=trasactional_core
+DBNAME=transactional_core
 DBUSER=cnxuser
 PASSWORD=cnx_password
 HOST=localhost
 PORT=5432
 ml_search_endpoint="https://api.mercadolibre.com/sites/MLA/search"
 ml_item_endpoint="https://api.mercadolibre.com/items/{item_id}"
+
+
+ROOT_USER=postgres
+ROOT_PASSWORD=root
